--- a/personal-portfolio-page/css/index.css
+++ b/personal-portfolio-page/css/index.css
@@ -182,7 +182,8 @@ h2 {
 
 .project a:hover {
 
-    text-decoration: #101010 underline;
+    color: #accbee;
+    text-decoration: #accbee underline;
 
 }
 
